# bai_invoice_extraction

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TECHNICAL_REQUIREMENTS.md  Taskfile.yml  main.py  pyproject.toml
src/: config.py  env.py  main.py  models.py
src/extraction/: client.py
src/parsing/: client.py
src/pipeline/: runner.py
src/services/: cosmos.py  excel.py  http.py  llm.py  ocr.py  sharepoint.py
src/template_generation/: __init__.py  client.py  store.py
src/utils/: logging.py  render.py  text.py  visualize.py
tests/: __init__.py  test_eval_cache_policy.py  test_eval_contracts.py  test_eval_reporting.py
tests/evals/: __init__.py  config.py  contracts.py  corpus.py  executor.py  main.py  models.py  reporting.py
tests/evals/evaluation/: __init__.py  runner.py
tests/evals/evaluators/: __init__.py  accuracy.py  base.py  template.py
tests/evals/golden_dataset/: invoice_extraction_evals_v1.xlsx
