[project]
name = "bai-invoice-extraction"
version = "0.1.0"
description = "Internal invoice extraction tool for finance"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "httpx>=0.28",
    "msal>=1.31",
    "azure-ai-documentintelligence>=1.0",
    "azure-cosmos>=4.9",
    "pymupdf>=1.24",
    "openai>=1.60",
]
